--- a/app/src/main/res/layout/fragment_noti_in_progress.xml
+++ b/app/src/main/res/layout/fragment_noti_in_progress.xml
@@ -56,7 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/din_pro_bold"
-            android:text="@string/noti_in_progress_num"
+            tools:text="@string/noti_in_progress_num"
             android:textColor="@color/pink"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="@+id/tv_in_progress_num2"
