--- a/app/src/main/res/layout/item_notification_receive.xml
+++ b/app/src/main/res/layout/item_notification_receive.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="ingData"
-            type="org.seemeet.seemeet.data.local.NotificationIngData" />
+            type="org.seemeet.seemeet.data.model.response.invitation.Invitation" />
 
     </data>
 
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:fontFamily="@font/spoqa_han_sans_neo_bold"
-            android:text="@{ingData.requestTitle}"
+            android:text="@{ingData.invitationTitle}"
             android:textColor="@color/gray06"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
-            android:text="@{ingData.day}"
+            setNotiDay="@{ingData.createdAt}"
             android:textColor="@color/gray04"
             android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="@id/tv_receive"
@@ -54,7 +54,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
-            android:text="@{ingData.msg}"
+            setNotiReceiveMsg="@{ingData.confirmed}"
             android:textColor="@color/gray06"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="@id/tv_receive"
