--- a/app/src/main/res/layout/activity_apply.xml
+++ b/app/src/main/res/layout/activity_apply.xml
@@ -33,7 +33,7 @@
         app:layout_constraintStart_toStartOf="@+id/tv_timepicker"
         app:layout_constraintTop_toBottomOf="@+id/tv_timepicker" />
 
-    <ImageView
+    <Switch
         android:id="@+id/iv_x"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
