--- a/app/src/main/res/layout/activity_send.xml
+++ b/app/src/main/res/layout/activity_send.xml
@@ -80,13 +80,13 @@
                         android:layout_marginBottom="7dp"/>
 
                     <TextView
+                        android:id="@+id/tv_send_count"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/tv_send"
                         android:layout_marginTop="24dp"
                         android:layout_marginEnd="16dp"
-                        setResponseCnt="@{viewModel.guestCnt}"
                         tools:text="2/3"
                         android:fontFamily="@font/din_pro_regular"
                         android:textSize="30sp"
@@ -156,7 +156,7 @@
                         android:textSize="14sp"
                         android:textColor="@color/gray06"
                         android:letterSpacing="-0.01"
-                        android:text="@{viewModel.inviTitle}"
+                        android:text="@{viewModel.sendInvitationData.invitationTitle}"
                         tools:text="대방어데이"/>
 
 
@@ -192,7 +192,7 @@
                             android:layout_marginEnd="20dp"
                             android:layout_marginStart="25dp"
                             android:lineSpacingExtra="10sp"
-                            android:text="@{viewModel.desc}"
+                            android:text="@{viewModel.sendInvitationData.invitationDesc}"
                             tools:text="야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들
 야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들"/>
 
@@ -203,6 +203,7 @@
                     android:id="@+id/cl_send_bottom"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
                     android:layout_marginBottom="28dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/cl_send_content">
