[MOD] 홈 _ 리싸이클러뷰 xml 조정

--- a/app/src/main/res/layout/item_home_reminder.xml
+++ b/app/src/main/res/layout/item_home_reminder.xml
@@ -75,6 +75,9 @@
             android:textAlignment="center"
             android:letterSpacing="-0.08"
             android:layout_marginBottom="6dp"
+            android:ems="6"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:fontFamily="@font/spoqa_han_sans_neo_bold"
             app:layout_constraintBottom_toTopOf="@id/tv_home_reminder_detail"
             app:layout_constraintEnd_toEndOf="@+id/iv_home_reminder"
