--- a/app/src/main/res/layout/item_notification_done.xml
+++ b/app/src/main/res/layout/item_notification_done.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="doneData"
-            type="org.seemeet.seemeet.data.local.NotificationDoneData" />
+            type="org.seemeet.seemeet.data.model.response.invitation.Invitation" />
 
     </data>
 
@@ -25,7 +25,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="14dp"
             android:fontFamily="@font/spoqa_han_sans_neo_medium"
-            android:text="@{doneData.day}"
+            setNotiDay="@{doneData.createdAt}"
             android:textColor="@color/gray04"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +58,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:fontFamily="@font/spoqa_han_sans_neo_bold"
-            android:text="@{doneData.appointmentTitle}"
+            android:text="@{doneData.invitationTitle}"
             android:textColor="@color/black"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="@id/tv_done_day"
