--- a/app/src/main/res/layout/item_picker_event.xml
+++ b/app/src/main/res/layout/item_picker_event.xml
@@ -12,7 +12,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="17dp">
 
         <View
             android:id="@+id/view_dot"
@@ -27,12 +28,11 @@
             android:id="@+id/tv_start_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/din_pro_regular"
-            android:letterSpacing="0.01"
+            android:layout_marginLeft="21dp"
+            android:fontFamily="@font/din_pro_medium"
             android:text="@{calendarEvent.startTime}"
             android:textColor="@color/gray06"
-            android:textSize="14sp"
-            android:textStyle="normal"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/view_dot"
             app:layout_constraintTop_toTopOf="parent"
@@ -42,11 +42,10 @@
             android:id="@+id/tv_symbol"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/din_pro_regular"
-            android:letterSpacing="0.01"
+            android:fontFamily="@font/din_pro_medium"
             android:text=" - "
             android:textColor="@color/gray06"
-            android:textSize="14sp"
+            android:textSize="18sp"
             android:textStyle="normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tv_start_time"
@@ -56,11 +55,10 @@
             android:id="@+id/tv_end_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/din_pro_regular"
-            android:letterSpacing="0.01"
             android:text="@{calendarEvent.endTime}"
+            android:fontFamily="@font/din_pro_medium"
             android:textColor="@color/gray06"
-            android:textSize="14sp"
+            android:textSize="18sp"
             android:textStyle="normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tv_symbol"
@@ -72,8 +70,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/din_pro_regular"
-            android:letterSpacing="0.01"
             android:text="|"
+            android:layout_marginLeft="14dp"
             android:textColor="@color/gray06"
             android:textSize="14sp"
             android:textStyle="normal"
@@ -85,11 +83,11 @@
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/din_pro_regular"
-            android:letterSpacing="0.01"
+            android:fontFamily="@font/spoqa_han_sans_neo_medium"
+            android:layout_marginLeft="14dp"
             android:text="@{calendarEvent.planTitle}"
             android:textColor="@color/gray06"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:textStyle="normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tv_bar"
