--- a/app/src/main/res/layout/item_picker_date.xml
+++ b/app/src/main/res/layout/item_picker_date.xml
@@ -11,7 +11,9 @@
         android:layout_height="wrap_content"
         android:background="@color/white"
         app:cardCornerRadius="10dp"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginRight="3dp"
+        android:layout_marginLeft="3dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -22,8 +24,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="13dp"
+                android:fontFamily="@font/spoqa_han_sans_neo_medium"
                 android:gravity="center"
-                android:textSize="18sp"
+                android:textSize="13sp"
                 app:layout_constraintBottom_toTopOf="@+id/tv_date"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="Mon" />
@@ -32,11 +37,14 @@
                 android:id="@+id/tv_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/din_pro_bold"
                 android:gravity="center"
-                android:textSize="18sp"
+                android:textSize="16sp"
+                android:layout_marginBottom="12dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_day"
                 tools:text="24" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
@@ -45,6 +53,7 @@
         android:id="@+id/view_dot"
         android:layout_width="5dp"
         android:layout_height="5dp"
+        android:layout_marginTop="4dp"
         android:background="@drawable/oval_pink"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
