--- a/app/src/main/res/layout/item_picker_date.xml
+++ b/app/src/main/res/layout/item_picker_date.xml
@@ -3,58 +3,54 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
-    <androidx.cardview.widget.CardView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        app:cardCornerRadius="10dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="3dp"
         android:layout_marginRight="3dp"
-        android:layout_marginLeft="3dp">
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/rectangle_white_radius_10">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <TextView
+            android:id="@+id/tv_day"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="13dp"
+            android:layout_marginBottom="8dp"
+            android:fontFamily="@font/spoqa_han_sans_neo_medium"
+            android:gravity="center"
+            android:textSize="13sp"
+            app:layout_constraintBottom_toTopOf="@+id/tv_date"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Mon" />
 
-            <TextView
-                android:id="@+id/tv_day"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="13dp"
-                android:fontFamily="@font/spoqa_han_sans_neo_medium"
-                android:gravity="center"
-                android:textSize="13sp"
-                app:layout_constraintBottom_toTopOf="@+id/tv_date"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="Mon" />
+        <TextView
+            android:id="@+id/tv_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:fontFamily="@font/din_pro_bold"
+            android:gravity="center"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_day"
+            tools:text="24" />
 
-            <TextView
-                android:id="@+id/tv_date"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/din_pro_bold"
-                android:gravity="center"
-                android:textSize="16sp"
-                android:layout_marginBottom="12dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_day"
-                tools:text="24" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.cardview.widget.CardView>
 
     <View
         android:id="@+id/view_dot"
         android:layout_width="5dp"
         android:layout_height="5dp"
         android:layout_marginTop="4dp"
+        android:layout_marginBottom="9dp"
         android:background="@drawable/oval_pink"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layout_date" />
