--- a/app/src/main/res/layout/item_receive_checkbox.xml
+++ b/app/src/main/res/layout/item_receive_checkbox.xml
@@ -5,10 +5,8 @@
     <data>
         <variable
             name="checkboxData"
-            type="org.seemeet.seemeet.data.local.CheckboxData"/>
-        <variable
-            name="viewModel"
-            type="org.seemeet.seemeet.ui.viewmodel.ReceiveViewModel" />
+            type="org.seemeet.seemeet.data.model.response.invitation.ReceiveInvitationDate"/>
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -49,7 +47,8 @@
             android:layout_marginTop="7dp"
             android:layout_marginBottom="21dp"
             android:fontFamily="@font/din_pro_regular"
-            android:text="@{checkboxData.time}"
+            setStartTime="@{checkboxData.start}"
+            setEndTime="@{checkboxData.end}"
             android:textColor="@color/gray06"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
